# mlops-drift-detection

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  environment.yml  mlflow.db  pyproject.toml  requirements-docker.txt  workflow.md
.github/workflows/: mlops-pipeline.yml
Terraform/: README.md
Terraform/modules/aws/monitoring/: main.tf
Terraform/modules/aws/rds/: main.tf
Terraform/modules/aws/s3/: main.tf
Terraform/modules/aws/vpc/: variables.tf
Terraform/modules/azure/eks/: README.md  main.tf  variables.tf
Terraform/modules/gcp/eks/: iam.tf
Terraform/modules/gcp/rds/: readme.md
Terraform/modules/gcp/vpc/: outputs.tf
Terraform/modules/shared/vpc/: main.tf
argo-cd/application/: app-of-apps.yaml  ml-platform.yaml  mlflow.yaml  monitoring.yaml
argo-cd/projects/: ml-platform-project.yaml
chaos-engineering/experiments/: ml-platform-chaos.yaml
config/: platform-config.yaml
config/environments/: prod.yaml
docs/: feature-store-achitecture.md  interview-script.md  model-erving-optimization.yaml  tech-deep-dives.md
docs/architecture/: README.md
docs/demo/: business-value.md  interview.sh  qa.md  quick-demo.sh
docs/demo/presentation/: slides.md
docs/runbooks/: README.md
feature-store/: feature_store.yaml
infrastructure/: Dockerfile.api  Dockerfile.api.old  Dockerfile.mlflow  Dockerfile.mlflow.enhanced  Dockerfile.monitoring  Dockerfile.trainer  nginx.conf
kubernetes/base/: kustomization.yaml  namespaces.yaml  rbac.yaml
kubernetes/components/api/: deployment.yaml  hpa-custom-metrics.yaml  service.yaml
kubernetes/components/databases/: redis.yaml
kubernetes/components/istio/: virtual-services.yaml
kubernetes/components/mlflow/: deployment.yaml  service.yaml
kubernetes/components/monitoring/custom-metrics/: custom-metrics.yaml
kubernetes/components/monitoring/prometheus/: configmap.yaml  deployment.yaml
kubernetes/components/security/: cert-manager.yaml  falco.yaml  gatekeeper.yaml  netork-policies.yaml  pod-security.yaml  security-context.yaml  vault.yaml
kubernetes/overlays/prod/: kustomization.yaml  mlflow-replicas-patch.yaml
observability/grafana/dashboards/: ml-platform-overview.json
observability/prometheus/: prometheus-values.yaml
observability/prometheus/alerting-rules/: ml-platform-rules.yml
observability/prometheus/recording-rules/: ml-metrics.yml
observability/tempo/: tempo-config.yaml
opa/constrints/: resource-limits.yaml
opa/policies/: model-deployment.rego
script/: advanced-canary-deployment.sh  canary-deployment.sh  compliance-scan.sh  deploy-gitops.sh  deploy-k8s.sh  deploy-platform.sh  deploy-production.sh  health-check.sh  security-scan.sh  setup-vault.sh  setup_env.sh  test_mlflow.py  verify-production-ready.sh
src/: version.py
src/api/: config.py  main.py
src/config/: settings.py
src/data/: pipeline.py
src/explainability/: shap_explainer.py
src/fairness/: bias_detector.py
src/feature_store/: service.py
src/mlops_drift_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: training.py
src/monitoring/: advanced_drift_detector.py  dashboard.py  drift.py
src/monitoring/drift/: drift_service.py
src/optimization/: resource_optimizer.py
src/pipelines/: training_pipeline.py
tekton/pipelines/: ml-training-pipeline.yaml
tekton/tasks/: model-training.yaml
tekton/triggers/: webhook-triggers.yaml
tests/: conftest.py
tests/unit/: test_basic.py  test_model.py
tutorial/: content.md  ref.md
vault/config/: vault-config.hcl
vault/policies/: ml-platform.hcl
