[project]
name = "mlops-drift-detection"
version = "1.0.0"
description = "Enterprise-grade MLOps pipeline with drift detection"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # Core ML - these work well with pip
    "scikit-learn>=1.3.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    
    # MLOps tools
    "mlflow>=2.8.1",
    "prefect>=2.10.5", 
    "evidently>=0.4.8",
    
    # API & Web
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
mlops-api = "src.api.main:app"
mlops-dashboard = "src.monitoring.dashboard:main"

# Tool configurations (black, pytest, etc.) remain the same
[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]